# wayex-ledger-sync

./: Cargo.toml  flake.nix
src/: main.rs  version.rs
